# FvmStarryCard

./: .gitignore  CMakeLists.txt  cardrecognizer.cpp  cardrecognizer.h  custombutton.cpp  custombutton.h  generate_qrc.py  local.cmake  local.cmake.example  main.cpp  reciperecognizer.cpp  reciperecognizer.h  resources.qrc  resources_background.qrc  resources_bind_state.qrc  resources_card.qrc  resources_cards.qrc  resources_clover.qrc  resources_gameImage.qrc  resources_icons.qrc  resources_level.qrc  resources_levels.qrc  resources_position.qrc  resources_recipe.qrc  resources_spices.qrc  resources_spicesShow.qrc  resources_ui.qrc  spice_config.json  starrycard.cpp  starrycard.h  starrycard_zh_CN.ts  stellarforge.cpp  stellarforge.h  stellarforge.ui  stellarforge_ui.py  stellarforge_zh_CN.ts  test_resources.cpp  update_resources.bat  utils.cpp  utils.h  (+1 more)
docs/: 日志清理方案.md  项目重构报告.md  香料配置页面功能增强说明.md
items/: 强化方案.xlsx
resources/qrc/: resources.qrc.old  resources_background.qrc  resources_bind_state.qrc  resources_card.qrc  resources_clover.qrc  resources_gameImage.qrc  resources_icons.qrc  resources_level.qrc  resources_position.qrc  resources_recipe.qrc  resources_spices.qrc  resources_spicesShow.qrc
scripts/: auto_generate_qrc.py  check_png_srgb.py  fix_png_srgb.py  fix_qrc_paths.py  fix_qrc_prefix.py  fix_qrc_simple_paths.py  generate_qrc.py  starrycard_ui.py  test_qrc_paths.py  update_qrc_paths.py  update_resource_paths.py  update_source_for_simple_paths.py  update_source_paths.py
src/: debug_resources.cpp  main.cpp
src/core/: starrycard.cpp  starrycard.h  utils.cpp
src/recognition/: cardrecognizer.cpp  cardrecognizer.h  reciperecognizer.cpp  reciperecognizer.h
src/ui/: starrycard.ui  starrycard_ui.py
